<resources>
    <string name="app_name">PraAssesment</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about">About</string>
    <string name="persegi_panjang">Persegi Panjang</string>
    <string name="segitiga">Segitiga</string>
    <string name="panjang">Panjang</string>
    <string name="lebar">Lebar</string>
    <string name="hitung">Hitung</string>
    <string name="luas">Luas : ...</string>
    <string name="keliling">Keliling : ...</string>
    <string name="share">Share</string>
    <string name="alas">Alas</string>
    <string name="tinggi">Tinggi</string>
    <string name="nim">6706181079</string>
    <string name="nama">M. Fathin Fawwaz Ammar</string>
    <string name="d3if_42_02">D3IF-42-02</string>
</resources>
