<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">
    <ScrollView android:layout_width="match_parent" android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".SegitigaFragment">
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/tvAlas" android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
                android:layout_marginTop="24dp" app:layout_constraintTop_toTopOf="parent"
                android:hint="@string/alas"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/tvTinggi" android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
                android:hint="@string/tinggi" app:layout_constraintHorizontal_bias="0.0"
                android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/tvAlas"/>
        <Button
                android:text="@string/hitung"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/bHitung" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/tvTinggi"/>
        <TextView
                android:text="@string/luas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvLuasPP" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
                app:layout_constraintTop_toBottomOf="@+id/bHitung" android:layout_marginTop="24dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
        <TextView
                android:text="@string/keliling"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvKelilingPP" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                app:layout_constraintTop_toBottomOf="@+id/tvLuasPP" android:layout_marginTop="16dp"/>
        <Button
                android:text="@string/share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/bShare"
                app:layout_constraintTop_toBottomOf="@+id/tvKelilingPP" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" android:layout_marginTop="24dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>