<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">
<androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".AboutFragment">

    <TextView
            android:text="@string/nim"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="180dp"
            app:layout_constraintTop_toTopOf="parent" android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
    <TextView
            android:text="@string/nama"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintHorizontal_bias="0.501" android:layout_marginTop="16dp"/>
    <TextView
            android:text="@string/d3if_42_02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintHorizontal_bias="0.501" app:layout_constraintTop_toBottomOf="@+id/textView2"
            android:layout_marginTop="16dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>